# pokemons_map

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  seed_db.py
pogomap/: settings.py  urls.py  wsgi.py
pokemon_entities/: admin.py  apps.py  models.py  schemas.py  services.py  views.py
pokemon_entities/migrations/: 0001_initial.py  0002_auto_20190918_2214.py  0003_auto_20190921_1230.py  0004_auto_20190921_1231.py  0005_auto_20190921_1251.py  0006_auto_20190921_2120.py  0007_auto_20190922_1217.py  0008_auto_20190922_1237.py  0009_auto_20190922_1243.py  0010_auto_20190922_1245.py  0011_auto_20190924_1953.py  0012_auto_20190924_1959.py  0013_pokemon_next_evolution.py  0014_auto_20191007_2135.py  0015_auto_20191008_2218.py  0016_data_migrations.py  0017_auto_20191008_2250.py  0018_auto_20191011_2135.py
pokemon_entities/templates/: base.html  mainpage.html  pokemon.html
